# benchmark1

./: .gitignore  .gitmodules  README.md  angstrom_parser.opam  benchmark1.opam  benchmark1.opam.locked  benchmark1.opam.template  dune-project  parsers.opam
lib/: benchmark1.ml  dune  reader.ml
lib_angstrom_parser/: dune  headers.ml  message.ml  method.ml  parse.ml  request.ml  response.ml  status.ml  version.ml
lib_cohttp_parser/: dune  header.ml  headers.ml  parse.ml  reader.ml  request.ml
test/: dune  test_headers.md  test_parser.md
